--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 
 node_js:
-  - "8"
+  - "16.13.0"
+
+before_install:
+  - npm install -g npm@latest
 
 install:
   - npm install
