--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "coveralls": "^3.1.1",
     "hardhat": "^2.10.2"
   },
   "dependencies": {
