--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test",
+    "lint": "solhint ./contracts/*.sol"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
     "coveralls": "^3.1.1",
-    "hardhat": "^2.10.2"
+    "hardhat": "^2.10.2",
+    "solhint": "^3.3.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3"
