--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "npx solhint ./contracts/*.sol",
     "test": "npx hardhat test",
-    "lint": "solhint ./contracts/*.sol"
+    "coverage": "npx hardhat coverage"
   },
   "author": "",
   "license": "MIT",
