--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "compile": "npx hardhat compile",
     "lint": "npx solhint ./contracts/*.sol",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage"
